--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="#home">logo<span>Company</span></a>
+            <a class="logo" href="#home">logo<span>Empresa</span></a>
 
             <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Open Navigation">
 
@@ -21,13 +21,13 @@
                 
                 <ul class="primary-nav">
                     <li class="current"><a href="#home">Home</a></li>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#testimonials">Pricing</a></li>
+                    <li><a href="#features">Diferenciais</a></li>
+                    <li><a href="#testimonials">Depoimentos</a></li>
                 </ul>
 
                 <ul class="secondary-nav">
-                    <li><a href="#contact">Contact</a></li>
-                    <li class="go-premium-cta"><a href="#">Go Premium</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                    <li class="go-premium-cta"><a href="#">Seja Premium</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,18 +36,18 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="left-col">
-                <p class="subhead">It's Nitty &amp; Gritty</p>
-                <h1>A Task App That Doens't Stink</h1>
+                <p class="subhead">App rápido &amp; Fácil</p>
+                <h1>Um app que não te deixa na mão!</h1>
 
                 <div class="hero-cta">
-                    <a href="#" class="primary-cta">Try for free</a>
+                    <a href="#" class="primary-cta">Experimente!</a>
                     <a href="#" class="watch-video-cta">
-                        <img src="images/watch.svg" alt="watch a video"> Watch a video
+                        <img src="images/watch.svg" alt="watch a video"> Veja um video
                     </a>
                 </div>
             </div>
 
-            <img class="hero-img" src="images/illustration.svg" alt="illustration">
+            <img class="hero-img" src="images/landing-logo.svg" alt="illustration">
         </div>
     </section>
 
@@ -55,12 +55,12 @@
     <section class="features-section" id="features" >
         <div class="container">
             <ul class="features-list">
-                <li>You company diferentials</li>
-                <li>You company diferentials</li>
-                <li>You company diferentials</li>
-                <li>You company diferentials</li>
-                <li>You company diferentials</li>
-                <li>You company diferentials</li>
+                <li>Diferencais da empresa</li>
+                <li>Diferencais da empresa</li>
+                <li>Diferencais da empresa</li>
+                <li>Diferencais da empresa</li>
+                <li>Diferencais da empresa</li>
+                <li>Diferencais da empresa</li>
             </ul>
 
             <img src="images/holding-phone.jpg" alt="Man holding phone">
